# weather-bot

./: .env.example  Dockerfile  README.md  docker-compose.yml  format.sh  pyproject.toml  ruff.toml  run.sh
bot/: __main__.py  api.py  bot.py  config.py  const.py  database.py  logger.py  main.py
